# drone-pc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ar.cpp  main.cpp  main_ar.cpp  main_viz.cpp  start.sh  unlink.sh  visualizer.cpp
ar/: drone.cpp
basic/: logger.hpp  safe_exit.cpp  safe_exit.hpp  shared_memory.hpp  socket.hpp  socket_client.cpp  socket_client.hpp  socket_server.cpp  socket_server.hpp  unit.hpp
basic/impl/: base.hpp  client.hpp  server.hpp
cmake_library/: real.cmake  sim.cmake
common/: message_types.hpp  message_types_drone.hpp  message_types_viz.hpp  safe_exit.cpp  safe_exit.hpp  unit.hpp
common/params/: control_params.hpp  environment_params.hpp  kinect_params.hpp  simulator_params.hpp
common/visual/: drone.hpp  project_room.hpp
control/: localization.cpp  localization.hpp  position_control.cpp
control/impl/: circle.cpp  circle.hpp
drone/: drone.cpp  drone.hpp
esp32/: esp32.cpp  esp32.hpp
kinect/: kinect.cpp
modules_main/control/: localization.hpp  position_control.cpp  position_control.hpp  position_init.cpp  position_init.hpp  star_reckoning.cpp  star_reckoning.hpp  task.hpp
modules_main/control/impl/: circle_detection.hpp
modules_main/drone/: drone.cpp
modules_main/esp32/: esp32.cpp
modules_main/kinect/: kinect.cpp  kinect.hpp  logger.hpp
modules_main/params/: recognition_params.hpp
modules_visualizer/graphic/: color.hpp  graphic.cpp  graphic.hpp  shape.cpp  shape.hpp  stl.hpp
modules_visualizer/graphic/stl/: color.hpp
params/: control_params.hpp
resource/: ardrone.stl  human.stl
simulator/core/include/core/: core.hpp  message_types.hpp  model.hpp  runge_kutta.hpp
simulator/core/src/: core.cpp
simulator/cvdrones_sim/include/ardrone/: ardrone.h
simulator/cvdrones_sim/src/: ardrone.cpp
simulator/libfreenect2_sim/include/libfreenect2/: frame_listener.h  libfreenect2.hpp  logger.h
simulator/libfreenect2_sim/src/: logger.cpp
testsuite/: eigen_test.cpp  unit_test.cpp
testsuite/ar/: socket_test_ar.cpp
testsuite/main/: circle_detect.cpp  eigen_test.cpp  kinect_test.cpp  socket_test_main.cpp  thread_test.cpp  unit_test.cpp
testsuite/visualizer/: endian_test.cpp  project_room.cpp  stl_test.cpp
visualizer/: graphic.cpp  graphic.hpp  shape.cpp  shape.hpp
visualizer/stl/: binary.hpp
